update installer for multimc and fix build scripts