@@ -1,5 +1,6 @@
-import org.json.JSONObject;
+import org.json.*;
 import java.awt.*;
+import java.awt.TrayIcon.MessageType;
 import java.awt.event.*;
 import java.awt.image.BufferedImage;
 import java.beans.*;
@@ -10,6 +11,8 @@ import java.net.URI;
 import java.nio.channels.Channels;
 import java.nio.channels.ReadableByteChannel;
 import java.security.MessageDigest;
+import java.util.ArrayList;
+import java.util.Arrays;
 import java.util.zip.ZipEntry;
 import java.util.zip.ZipInputStream;
 import java.util.zip.ZipOutputStream;
@@ -33,10 +36,10 @@ public class Installer extends JPanel  implements PropertyChangeListener
     private String tempDir = System.getProperty("java.io.tmpdir");
 
     private static final boolean ALLOW_FORGE_INSTALL = true; 
-    private static final boolean DEFAULT_FORGE_INSTALL = true; 
+	private static final boolean DEFAULT_FORGE_INSTALL = false; 
     private static final boolean ALLOW_HYDRA_INSTALL = false; 
-    private static final boolean ALLOW_KATVR_INSTALL = false; 
-    private static final boolean ALLOW_KIOSK_INSTALL = false; 
+	private static final boolean ALLOW_KATVR_INSTALL = false; 
+	private static final boolean ALLOW_KIOSK_INSTALL = true; 
     private static final boolean ALLOW_HRTF_INSTALL = true; 
 	private static final boolean ALLOW_SHADERSMOD_INSTALL = false;  
 
@@ -59,14 +62,15 @@ public class Installer extends JPanel  implements PropertyChangeListener
     private static final String OF_JSON_NAME      = "1.10.2_HD_U_E3";
     private static final String OF_MD5            = "7ea7d7c1e353da2a94961b443e59026f";
     private static final String OF_VERSION_EXT    = ".jar";
-    private static final String FORGE_VERSION     = "12.18.3.2511";
+    private static String FORGE_VERSION     = "12.18.3.2511";
     /* END OF DO NOT RENAME */
 
 	private static final String DEFAULT_PROFILE_NAME = "ViveCraft " + MINECRAFT_VERSION;
 	private static final String DEFAULT_PROFILE_NAME_FORGE = "ViveCraft-Forge " + MINECRAFT_VERSION;
-	private static final String GITHUB_LINK = "https://github.com/jrbudda/Vivecraft_110";
+	private static final String GITHUB_LINK = "https://github.com/jrbudda/Vivecraft_112";
 	private static final String HOMEPAGE_LINK = "http://www.vivecraft.org";
 	private static final String DONATION_LINK = "https://www.patreon.com/jrbudda";
+    private static final String ORIG_FORGE_VERSION = FORGE_VERSION;
 
     private String mc_url = "https://s3.amazonaws.com/Minecraft.Download/versions/" + MINECRAFT_VERSION + "/" + MINECRAFT_VERSION +".jar";
 
@@ -75,9 +79,9 @@ public class Installer extends JPanel  implements PropertyChangeListener
     static private File targetDir;
     private String[] forgeVersions = null;
     private boolean forgeVersionInstalled = false;
-    private static final String FULL_FORGE_VERSION = MINECRAFT_VERSION + "-" + FORGE_VERSION;
+	private static String FULL_FORGE_VERSION = MINECRAFT_VERSION + "-" + FORGE_VERSION;
     private String forge_url = "http://files.minecraftforge.net/maven/net/minecraftforge/forge/" + FULL_FORGE_VERSION + "/forge-" + FULL_FORGE_VERSION + "-installer.jar";
-    private File forgeInstaller = new File(tempDir + "/forge-" + FULL_FORGE_VERSION + "-installer.jar");
+	private File forgeInstaller;
     private JTextField selectedDirText;
     private JLabel infoLabel;
     private JDialog dialog;
@@ -95,6 +99,8 @@ public class Installer extends JPanel  implements PropertyChangeListener
     private JCheckBox useHrtf;
     private JCheckBox katvr;
     private JCheckBox kiosk;
+	private JCheckBox optCustomForgeVersion;
+	private JTextField txtCustomForgeVersion;
 	private JComboBox ramAllocation;
     private final boolean QUIET_DEV = false;
 	private File releaseNotes = null;
@@ -122,31 +128,672 @@ public class Installer extends JPanel  implements PropertyChangeListener
     private boolean isWindows = false;
     private String appDataDir;
 
-    class InstallTask extends SwingWorker<Void, Void>{
+	public Installer(File target)
+	{
+		targetDir = target;
+		ToolTipManager.sharedInstance().setDismissDelay(Integer.MAX_VALUE);
+		this.setLayout(new BoxLayout(this, BoxLayout.Y_AXIS));
+
+		JPanel logoSplash = new JPanel();
+		logoSplash.setLayout(new BoxLayout(logoSplash, BoxLayout.Y_AXIS));
+		try {
+			// Read png
+			BufferedImage image;
+			image = ImageIO.read(Installer.class.getResourceAsStream("logo.png"));
+			ImageIcon icon = new ImageIcon(image.getScaledInstance(500, 200,  java.awt.Image.SCALE_SMOOTH));
+			JLabel logoLabel = new JLabel(icon);
+			logoLabel.setAlignmentX(LEFT_ALIGNMENT);
+			logoLabel.setAlignmentY(CENTER_ALIGNMENT);
+			if (!QUIET_DEV)	// VIVE - hide oculus logo
+				logoSplash.add(logoLabel);
+		} catch (IOException e) {
+		} catch( IllegalArgumentException e) {
+		}
     	
-        private boolean DownloadOptiFine()
+		userHomeDir = System.getProperty("user.home", ".");
+		osType = System.getProperty("os.name").toLowerCase();
+		if (osType.contains("win"))
         {
-            boolean success = true;
-            boolean deleted = false;
+			isWindows = true;
+			appDataDir = System.getenv("APPDATA");
+		}
 
+		version = "UNKNOWN";
             try {
-                File fod = new File(targetDir,OF_LIB_PATH+OF_JSON_NAME);
-                fod.mkdirs();
-                File fo = new File(fod,"OptiFine-"+OF_JSON_NAME+".jar");
+			InputStream ver = Installer.class.getResourceAsStream("version");
+			if( ver != null )
+			{
+				String[] tok = new BufferedReader(new InputStreamReader(ver)).readLine().split(":");
+				if( tok.length > 0)
+				{
+					jar_id = tok[0];
+					version = tok[1];
+				}
+			}
+		} catch (IOException e) { }
 
-                // Attempt to get the Optifine MD5
-                String optOnDiskMd5 = GetMd5(fo);
-                System.out.println(optOnDiskMd5 == null ? fo.getCanonicalPath() : fo.getCanonicalPath() + " MD5: " + optOnDiskMd5);
+		// Read release notes, save to file
+		String tmpFileName = System.getProperty("java.io.tmpdir") + releaseNotePathAddition + "Vivecraft" + version.toLowerCase() + "_release_notes.txt";
+		releaseNotes = new File(tmpFileName);
+		InputStream is = Installer.class.getResourceAsStream("release_notes.txt");
+		if (!copyInputStreamToFile(is, releaseNotes)) {
+			releaseNotes = null;
+		}
 
-                // Test MD5
-                if (optOnDiskMd5 == null)
+		JLabel tag = new JLabel("Welcome! This will install Vivecraft "+ version);
+		tag.setAlignmentX(LEFT_ALIGNMENT);
+		tag.setAlignmentY(CENTER_ALIGNMENT);
+		logoSplash.add(tag);
+
+		logoSplash.add(Box.createRigidArea(new Dimension(5,20)));
+		tag = new JLabel("Select path to minecraft. (The default here is almost always what you want.)");
+		tag.setAlignmentX(LEFT_ALIGNMENT);
+		tag.setAlignmentY(CENTER_ALIGNMENT);
+		logoSplash.add(tag);
+
+		logoSplash.setAlignmentX(LEFT_ALIGNMENT);
+		logoSplash.setAlignmentY(TOP_ALIGNMENT);
+
+		this.add(logoSplash);
+
+		JPanel entryPanel = new JPanel();
+		entryPanel.setLayout(new BoxLayout(entryPanel,BoxLayout.X_AXIS));
+		entryPanel.setAlignmentX(LEFT_ALIGNMENT);
+		entryPanel.setAlignmentY(TOP_ALIGNMENT);
+
+		selectedDirText = new JTextField();
+		selectedDirText.setEditable(false);
+		selectedDirText.setToolTipText("Path to minecraft");
+		selectedDirText.setAlignmentX(LEFT_ALIGNMENT);
+		selectedDirText.setAlignmentY(TOP_ALIGNMENT);
+		selectedDirText.setMaximumSize(new Dimension(400,20));
+
+		JButton dirSelect = new JButton();
+		dirSelect.setMaximumSize(new Dimension(20,20));
+		dirSelect.setAction(new FileSelectAction());
+		dirSelect.setText("...");
+		dirSelect.setToolTipText("Select an alternative minecraft directory");
+		dirSelect.setAlignmentX(LEFT_ALIGNMENT);
+		dirSelect.setAlignmentY(TOP_ALIGNMENT);
+
+		entryPanel.add(selectedDirText);
+		entryPanel.add(dirSelect);
+
+		infoLabel = new JLabel();
+		infoLabel.setHorizontalTextPosition(JLabel.LEFT);
+		infoLabel.setVerticalTextPosition(JLabel.TOP);
+		infoLabel.setAlignmentX(LEFT_ALIGNMENT);
+		infoLabel.setAlignmentY(TOP_ALIGNMENT);
+		infoLabel.setVisible(false);
+
+		fileEntryPanel = new JPanel();
+		fileEntryPanel.setLayout(new BoxLayout(fileEntryPanel,BoxLayout.Y_AXIS));
+		fileEntryPanel.setAlignmentX(LEFT_ALIGNMENT);
+		fileEntryPanel.setAlignmentY(TOP_ALIGNMENT);
+
+		fileEntryPanel.add(entryPanel);
+		fileEntryPanel.add(infoLabel);
+
+		this.add(fileEntryPanel);
+
+		this.add(Box.createVerticalStrut(5));
+
+
+
+		//Forge Options
+
+		JPanel forgePanel = new JPanel();
+		forgePanel.setLayout( new BoxLayout(forgePanel, BoxLayout.X_AXIS));
+		//Create forge: no/yes buttons
+		useForge = new JCheckBox();
+		AbstractAction actf = new updateActionF();
+		actf.putValue(AbstractAction.NAME, "Install Vivecraft with Forge");
+		useForge.setAction(actf);
+		useForge.setSelected(DEFAULT_FORGE_INSTALL);
+		forgeVersion = new JComboBox();
+		if (!ALLOW_FORGE_INSTALL)
+			useForge.setEnabled(false);
+		useForge.setToolTipText(
+				"<html>" +
+						"If checked, installs Vivecraft with Forge support.<br>" +
+				"</html>");
+
+		//Add "yes" and "which version" to the forgePanel
+		useForge.setAlignmentX(LEFT_ALIGNMENT);
+		forgeVersion.setAlignmentX(LEFT_ALIGNMENT);
+		forgePanel.setAlignmentX(LEFT_ALIGNMENT);
+		forgePanel.add(useForge);
+
+		optCustomForgeVersion = new JCheckBox();
+		
+		AbstractAction actf2 = new updateActionF();
+		actf2.putValue(AbstractAction.NAME, "Custom Version");
+		optCustomForgeVersion.setAction(actf2);
+		
+		txtCustomForgeVersion = new JTextField(FORGE_VERSION);
+		txtCustomForgeVersion.setMaximumSize(new Dimension(100,20));
+		forgePanel.add(optCustomForgeVersion);
+		forgePanel.add(txtCustomForgeVersion);
+		//forgePanel.add(forgeVersion);
+
+		//Create Profile
+		createProfile = new JCheckBox("", true);
+		AbstractAction actp = new updateActionP();
+		actp.putValue(AbstractAction.NAME, "Create Vivecraft launcher profile");
+		createProfile.setAction(actp);
+		createProfile.setAlignmentX(LEFT_ALIGNMENT);
+		createProfile.setSelected(true);
+		createProfile.setToolTipText(
+				"<html>" +
+						"Creates or updates a Minecraft Launcher profile for Vivecraft with the selected settings.<br>" +
+						"You should typically leave this checked." +
+				"</html>");
+
+		//Binaural Audio
+
+		useHrtf = new JCheckBox("Enable binaural audio (Only needed once per PC)", false);
+		useHrtf.setToolTipText(
+				"<html>" +
+						"If checked, the installer will create the configuration file needed for OpenAL HRTF<br>" +
+						"ear-aware sound in Minecraft (and other games).<br>" +
+						" If the file has previously been created, you do not need to check this again.<br>" +
+						" NOTE: Your sound card's output MUST be set to 44.1Khz.<br>" +
+						" WARNING, will overwrite " + (isWindows ? (appDataDir + "\\alsoft.ini") : (userHomeDir + "/.alsoftrc")) + "!<br>" +
+						" Delete the " + (isWindows ? "alsoft.ini" : "alsoftrc") + " file to disable HRTF again." +
+				"</html>");
+		useHrtf.setAlignmentX(LEFT_ALIGNMENT);
+
+		//ShadersMod
+
+		useShadersMod = new JCheckBox();
+		useShadersMod.setAlignmentX(LEFT_ALIGNMENT);
+		AbstractAction acts = new updateActionSM();
+		acts.putValue(AbstractAction.NAME, "Install Vivecraft with ShadersMod 2.3.29");
+		useShadersMod.setAction(acts);
+		useShadersMod.setToolTipText(
+				"<html>" +
+						"If checked, sets the vivecraft profile to use ShadersMod <br>" +
+						"support." +
+				"</html>");
+
+		//RAM Allocation
+
+		JPanel ramPanel = new JPanel();
+		ramPanel.setLayout( new BoxLayout(ramPanel, BoxLayout.X_AXIS));
+		ramPanel.setAlignmentX(LEFT_ALIGNMENT);
+		ramPanel.setAlignmentY(TOP_ALIGNMENT);
+
+		Integer[] rams = {1,2,4,6,8};
+
+		ramAllocation = new JComboBox(rams);
+		ramAllocation.setSelectedIndex(1);
+		ramAllocation.setToolTipText(
+				"<html>" +
+						"Select the amount of Ram, in GB to allocate to the Vivecraft profile.<br>" +
+						"At least 2GB is recommended. More than 1GB of ram requires 64 bit PC and java." +
+				"</html>");
+		ramAllocation.setAlignmentX(LEFT_ALIGNMENT);
+		ramAllocation.setMaximumSize( new Dimension((int)ramAllocation.getPreferredSize().getWidth(), 20));
+
+
+		JLabel ram = new JLabel("         Profile Ram Allocation (GB) ");
+		ram.setAlignmentX(LEFT_ALIGNMENT);
+
+		ramPanel.add(ram);
+		ramPanel.add(ramAllocation);
+
+		//Custom Profile
+
+		JPanel namePanel = new JPanel();
+		namePanel.setLayout( new BoxLayout(namePanel, BoxLayout.X_AXIS));
+		namePanel.setAlignmentX(LEFT_ALIGNMENT);
+		namePanel.setAlignmentY(TOP_ALIGNMENT);
+
+		txtCustomProfileName = new JTextField();
+		txtCustomProfileName.setAlignmentX(LEFT_ALIGNMENT);
+		txtCustomProfileName.setMaximumSize(new Dimension(250,20));
+		txtCustomProfileName.setEditable(false);
+
+		chkCustomProfileName = new JCheckBox();
+		chkCustomProfileName.setAlignmentX(LEFT_ALIGNMENT);
+		AbstractAction u = new updateTxtEnabled();
+		u.putValue(AbstractAction.NAME, "Custom Profile Name");
+		chkCustomProfileName.setAction(u);
+		chkCustomProfileName.setToolTipText(
+				"<html>" +
+				"Enter a custom name for this profile</html>");
+
+		namePanel.add(Box.createRigidArea(new Dimension(36,20)));
+		namePanel.add(chkCustomProfileName);
+		namePanel.add(txtCustomProfileName);
+
+		// Custom Game Dir
+
+		JPanel gameDirPanel = new JPanel();
+		gameDirPanel.setLayout( new BoxLayout(gameDirPanel, BoxLayout.X_AXIS));
+		gameDirPanel.setAlignmentX(LEFT_ALIGNMENT);
+		gameDirPanel.setAlignmentY(TOP_ALIGNMENT);
+
+		txtCustomGameDir= new JTextField();
+		txtCustomGameDir.setAlignmentX(LEFT_ALIGNMENT);
+		txtCustomGameDir.setMaximumSize(new Dimension(400,20));
+		txtCustomGameDir.setEditable(false);
+
+		chkCustomGameDir = new JCheckBox("Modpack Directory");
+		chkCustomGameDir.setAlignmentX(LEFT_ALIGNMENT);
+		chkCustomGameDir.setToolTipText(
+				"<html>" +
+						"Points the profile at a different game directory.<br>" +
+						"Select this to use Vivecraft with a modpack.<br>" +
+						"The game directory should contain the 'mods' " +
+						"directory of the desired pack." +
+				"</html>");
+
+		JButton gdirSelect = new JButton();
+		gdirSelect.setAction(new GameDirSelectAction());
+		gdirSelect.setText("...");
+		gdirSelect.setMaximumSize(new Dimension(20,20));
+		gdirSelect.setToolTipText("Select a modpack directory");
+		entryPanel.add(gdirSelect);
+
+		gameDirPanel.add(Box.createRigidArea(new Dimension(36,20)));
+		gameDirPanel.add(chkCustomGameDir);
+		gameDirPanel.add(txtCustomGameDir);
+		gameDirPanel.add(gdirSelect);
+
+		// KATVR
+
+		katvr = new JCheckBox("KATVR Driver", false);
+		katvr.setToolTipText(
+				"<html>" +
+						"If checked, install the drivers needed for KATVR Treadmill<br>" +
+				"DO NOT select this unless you have the KATVR runtime installed.</html>");
+		katvr.setAlignmentX(LEFT_ALIGNMENT);
+
+
+		kiosk = new JCheckBox("Kiosk Mode", false);
+		kiosk.setToolTipText(
+				"<html>" +
+						"If checked, disables use of in-game menu via controller" +
+				"</html>");
+		kiosk.setAlignmentX(LEFT_ALIGNMENT);
+
+		this.add(forgePanel);
+		if(ALLOW_SHADERSMOD_INSTALL) this.add(useShadersMod);
+		this.add(createProfile);
+		this.add(ramPanel);
+		this.add(namePanel);
+		this.add(gameDirPanel);
+		if(ALLOW_HRTF_INSTALL)this.add(useHrtf);
+		this.add(new JLabel("         "));
+		if(ALLOW_KATVR_INSTALL||ALLOW_KIOSK_INSTALL) this.add(new JLabel("Advanced Options"));
+		if(ALLOW_KIOSK_INSTALL) this.add(kiosk);
+		if(ALLOW_KATVR_INSTALL) this.add(katvr);
+
+		this.add(Box.createRigidArea(new Dimension(5,20))); 
+
+		instructions = new JLabel("",SwingConstants.CENTER);
+		instructions.setAlignmentX(CENTER_ALIGNMENT);
+		instructions.setAlignmentY(TOP_ALIGNMENT);
+		instructions.setForeground(Color.RED);
+		instructions.setPreferredSize(new Dimension(20, 40));
+		this.add(instructions);
+
+
+		this.add(Box.createVerticalGlue());
+		JLabel github = linkify("Vivecraft is open source. find it on Github",GITHUB_LINK,"Vivecraft Github");
+		JLabel wiki = linkify("Vivecraft home page",HOMEPAGE_LINK,"Vivecraft Home");
+		JLabel donate = linkify("If you think Vivecraft is awesome, please consider supporting us on Patreon",DONATION_LINK,"jrbudda's Patreon");
+		JLabel optifine = linkify("Vivecraft includes OptiFine for performance. Consider donating to them as well.","http://optifine.net/donate.php","http://optifine.net/donate.php");
+
+		github.setAlignmentX(CENTER_ALIGNMENT);
+		github.setHorizontalAlignment(SwingConstants.CENTER);
+		wiki.setAlignmentX(CENTER_ALIGNMENT);
+		wiki.setHorizontalAlignment(SwingConstants.CENTER);
+		donate.setAlignmentX(CENTER_ALIGNMENT);
+		donate.setHorizontalAlignment(SwingConstants.CENTER);
+		optifine.setAlignmentX(CENTER_ALIGNMENT);
+		optifine.setHorizontalAlignment(SwingConstants.CENTER);
+
+		this.add(Box.createRigidArea(new Dimension(5,20)));
+		this.add( github );
+		this.add( wiki );
+		this.add( donate );
+		this.add( optifine );
+		updateFilePath();
+		updateInstructions();
+	}
+
+
+	public void run()
+	{
+		JOptionPane optionPane = new JOptionPane(this, JOptionPane.PLAIN_MESSAGE, JOptionPane.OK_CANCEL_OPTION, null, new String[]{"Install", "Cancel"});
+
+		emptyFrame = new Frame("Vivecraft Installer");
+		emptyFrame.setUndecorated(true);
+		emptyFrame.setVisible(true);
+		emptyFrame.setLocationRelativeTo(null);
+		dialog = optionPane.createDialog(emptyFrame, "Vivecraft Installer");
+		dialog.setResizable(true);
+		dialog.setSize(620,748);
+		dialog.setDefaultCloseOperation(JDialog.DISPOSE_ON_CLOSE);
+		dialog.setVisible(true);
+		String str =  ((String)optionPane.getValue());
+		if (str !=null && ((String)optionPane.getValue()).equalsIgnoreCase("Install"))
                 {
-                    // Just continue...
-                    System.out.println("Optifine not found - downloading");
-                }
-                else if (!optOnDiskMd5.equalsIgnoreCase(OF_MD5)) {
-                    // Bad copy. Attempt delete just to make sure.
-                    System.out.println("Optifine MD5 bad - downloading");
+			int option = 0;
+			if(createProfile.isSelected())
+				option = JOptionPane.showOptionDialog(
+						null,
+						"Please ensure you have closed the Minecraft launcher before proceeding.\n" 
+						//"Also, if installing with Forge please ensure you have installed Forge " + FORGE_VERSION + " first.",
+						,"Important!",
+						JOptionPane.OK_CANCEL_OPTION,
+						JOptionPane.WARNING_MESSAGE, null, null, null);
+
+			if (option == JOptionPane.OK_OPTION) {
+				monitor = new ProgressMonitor(null, "Installing Vivecraft...", "", 0, 100);
+				monitor.setMillisToDecideToPopup(0);
+				monitor.setMillisToPopup(0);
+
+				task = new InstallTask();
+				task.addPropertyChangeListener(this);
+				task.execute();
+			}
+			else{
+				dialog.dispose();
+				emptyFrame.dispose();
+			}
+		}
+		else{
+			dialog.dispose();
+			emptyFrame.dispose();
+		}
+	}
+
+
+	class InstallTask extends SwingWorker<Void, Void>{
+		/*
+		 * Main task. Executed in background thread.
+		 */
+		public String finalMessage;
+
+		File mmcinst = null;
+		boolean isMultiMC = false;
+
+		@Override
+		public Void doInBackground()
+		{
+			StringBuilder sbErrors = new StringBuilder();
+			String minecriftVersionName = "vivecraft-" + version + mod;
+			boolean checkedRedists = false;
+			boolean redistSuccess = true;
+			boolean downloadedForge = false;
+			boolean installedForge = false;
+
+			if (useForge.isSelected()) 
+				mod = "-forge";
+
+			//check for multimc
+			for(File f : targetDir.listFiles()){
+				if(f.getName().equalsIgnoreCase("multimc.exe")){
+					ArrayList<File> ilist = new ArrayList<File>();
+					File insts = new File(targetDir, "instances");
+					for(File inst : insts.listFiles()){
+						if(inst.isDirectory() && !inst.getName().startsWith("_"))
+							ilist.add(inst);
+					}	
+					JComboBox icb = new JComboBox(ilist.toArray());
+					File sel =(File) JOptionPane.showInputDialog(null,"Select MultiMC Instance.","MultiMC Detected", JOptionPane.PLAIN_MESSAGE, null, ilist.toArray(), null);
+					if(sel !=null){
+						mmcinst = sel;
+						isMultiMC = true;
+					}
+				}
+			}
+			//
+
+			monitor.setProgress(0);
+
+			try {
+				// Set progress dialog size (using reflection - hacky)
+				Field progressdialog = monitor.getClass().getDeclaredField("dialog");
+				if (progressdialog != null) {
+					progressdialog.setAccessible(true);
+					Dialog dlg = (Dialog) progressdialog.get(monitor);
+					if (dlg != null) {
+						dlg.setSize(550, 200);
+						dlg.setLocationRelativeTo(null);
+					}
+				}
+			}
+			catch (NoSuchFieldException e) {}
+			catch (IllegalAccessException e) {}
+
+
+			finalMessage = "Failed: Couldn't download C++ redistributables. ";
+			monitor.setNote("Checking for required libraries...");
+			monitor.setProgress(5);
+			
+			finalMessage = "Failed: Couldn't download Optifine. ";
+			monitor.setNote("Checking Optifine... Please donate to them!");
+			monitor.setProgress(42);
+			// Attempt optifine download...
+			boolean downloadedOptifine = false;
+			monitor.setNote("Downloading Optifine... Please donate to them!");
+
+			for (int i = 1; i <= 3; i++)
+			{
+				if (DownloadOptiFine())
+				{
+					// Got it!
+					downloadedOptifine = true;
+					break;
+				}
+
+				// Failed. Sleep a bit and retry...
+				if (i < 3) {
+					try {
+						Thread.sleep(i * 1000);
+					}
+					catch (InterruptedException e) {
+					}
+					monitor.setNote("Downloading Optifine...retrying...");
+				}
+			}
+
+			if(useShadersMod.isSelected()){
+				finalMessage = "Failed: Couldn't download ShadersMod. ";
+				monitor.setNote("Checking ShadersModCore");
+				monitor.setProgress(42);
+				boolean downloadedSMC = false;
+				monitor.setNote("Downloading ShadersModCore");
+
+				for (int i = 1; i <= 3; i++)
+				{
+					if (downloadSMC(useForge.isSelected()))
+					{
+						// Got it!
+						downloadedSMC = true;
+						break;
+					}
+
+					// Failed. Sleep a bit and retry...
+					if (i < 3) {
+						monitor.setNote("Downloading ShadersModCore... waiting...");
+						try {
+							Thread.sleep(i * 1000);
+						}
+						catch (InterruptedException e) {
+						}
+						monitor.setNote("Downloading ShadersModCore...retrying...");
+					}
+				}
+			}
+
+			monitor.setProgress(50);
+			monitor.setNote("Checking for base game...");
+
+
+			if(!isMultiMC)
+				if(!SetupMinecraftAsLibrary())
+				{
+					JOptionPane.showMessageDialog(null,
+							"Could not locate or download base game. The Mincraft Launcher will attempt to download it.",
+							"Warning!",JOptionPane.WARNING_MESSAGE);
+
+				}
+
+			// VIVE START - install openVR
+			monitor.setProgress(52);
+			monitor.setNote("Installing OpenVR...");
+			finalMessage = "Failed: Couldn't extract openvr_api.dll to .minecraft folder.";
+			if(!InstallOpenVR())
+			{
+				monitor.close();
+				return null;
+			}
+			// VIVE END - install openVR
+
+			
+			// Setup forge if necessary
+			if(useForge.isSelected()){
+			
+				if(optCustomForgeVersion.isSelected())
+					FORGE_VERSION = txtCustomForgeVersion.getText();
+					
+				FULL_FORGE_VERSION = MINECRAFT_VERSION + "-" + FORGE_VERSION;
+				forgeInstaller = new File(tempDir + "/forge-" + FULL_FORGE_VERSION + "-installer.jar");
+				forge_url = "http://files.minecraftforge.net/maven/net/minecraftforge/forge/" + FULL_FORGE_VERSION + "/forge-" + FULL_FORGE_VERSION + "-installer.jar";
+
+				if( targetDir.exists() ) {
+					File ForgeDir = new File( targetDir, "libraries"+File.separator+"net"+File.separator+"minecraftforge"+File.separator+"forge");
+					if( ForgeDir.isDirectory() ) {
+						forgeVersions = ForgeDir.list();
+						if (forgeVersions != null && forgeVersions.length > 0) {
+							// Check for the currently required forge
+							for (String forgeVersion : forgeVersions) {
+								if (forgeVersion.contains(FORGE_VERSION)) {
+									forgeVersionInstalled = true;
+									break;
+								}
+							}
+						}
+					}
+				}
+				
+				if (useForge.isSelected() && !forgeVersionInstalled && !isMultiMC) {
+					monitor.setProgress(55);
+					monitor.setNote("Downloading Forge " + FULL_FORGE_VERSION + "...");
+					downloadedForge = downloadFile(forge_url, forgeInstaller);
+					if(!downloadedForge)
+					JOptionPane.showMessageDialog(null, "Could not download Forge. Please exit this installer and download it manually", "Forge Installation", JOptionPane.WARNING_MESSAGE);
+				}
+				
+				if (downloadedForge  && !forgeVersionInstalled) {
+					monitor.setProgress(65);
+					monitor.setNote("Installing Forge " + FULL_FORGE_VERSION + "...");
+					installedForge = installForge(forgeInstaller);
+				}
+			}
+			
+			monitor.setProgress(75);
+			monitor.setNote("Extracting correct Minecrift version...");
+			finalMessage = "Failed: Couldn't extract Minecrift. Try redownloading this installer.";
+
+			if(!ExtractVersion())
+			{
+				monitor.close();
+				return null;
+			}
+			if(useHrtf.isSelected())
+			{
+				monitor.setProgress(85);
+				monitor.setNote("Configuring HRTF audio...");
+				if(!EnableHRTF())
+				{
+					sbErrors.append("Failed to set up HRTF! Vivecraft will still work but audio won't be binaural.\n");
+				}
+			}
+			boolean profileCreated = false;
+			finalMessage = "Failed: Couldn't setup profile!";
+			
+			String profileName = getMinecraftProfileName(useForge.isSelected(), useShadersMod.isSelected());
+				if(chkCustomProfileName.isSelected() && txtCustomProfileName.getText().trim() != ""){
+					profileName = txtCustomProfileName.getText();
+				}
+				
+			if(!isMultiMC){
+				if (createProfile.isSelected())
+				{
+					monitor.setProgress(95);
+					monitor.setNote("Creating Vivecraft profile...");
+								
+					if (!updateLauncherJson(targetDir, minecriftVersionName, profileName))
+						sbErrors.append("Failed to set up 'Vivecraft' profile (you can still manually select Edit Profile->Use Version " + minecriftVersionName + " in the Minecraft launcher)\n");
+					else
+						profileCreated = true;
+				}
+			} else {
+				if (!updateMMCInst(mmcinst, minecriftVersionName))
+					sbErrors.append("Failed to set up 'Vivecraft' into instance.");
+				else
+					profileCreated = true;
+			}
+
+			if (!downloadedOptifine) {
+				finalMessage = "Installed (but failed to download OptiFine). Restart Minecraft" +
+						(profileCreated == false ? " and Edit Profile->Use Version " + minecriftVersionName : " and select the '" + getMinecraftProfileName(useForge.isSelected(), useShadersMod.isSelected()) + "' profile.") +
+						"\nPlease download and install Optifine " + OF_FILE_NAME + " from https://optifine.net/downloads before attempting to play.";
+			}
+			else {
+				if(isMultiMC && mmcinst != null)
+					finalMessage = "Installed successfully!. MultiMC Instance: " + mmcinst.toString();
+				else
+					finalMessage = "Installed successfully! Restart Minecraft" +
+							(profileCreated == false ? " and Edit Profile->Use Version " + minecriftVersionName : " and select the '" + profileName + "' profile.");
+			}
+
+			monitor.setProgress(100);
+			monitor.close();
+			return null;
+		}
+
+		/*
+		 * Executed in event dispatching thread
+		 */
+		@Override
+		public void done() {
+			setCursor(null); // turn off the wait cursor
+			JOptionPane.showMessageDialog(null, finalMessage, "Complete", JOptionPane.INFORMATION_MESSAGE);
+			dialog.dispose();
+			emptyFrame.dispose();
+		}
+
+
+		private boolean DownloadOptiFine()
+		{
+			boolean success = true;
+			boolean deleted = false;
+
+			try {
+				File fod = new File(targetDir,OF_LIB_PATH+OF_JSON_NAME);
+				fod.mkdirs();
+				File fo = new File(fod,"OptiFine-"+OF_JSON_NAME+".jar");
+
+				// Attempt to get the Optifine MD5
+				String optOnDiskMd5 = GetMd5(fo);
+				System.out.println(optOnDiskMd5 == null ? fo.getCanonicalPath() : fo.getCanonicalPath() + " MD5: " + optOnDiskMd5);
+
+				// Test MD5
+				if (optOnDiskMd5 == null)
+				{
+					// Just continue...
+					monitor.setNote("Optifine not found - downloading");
+				}
+				else if (!optOnDiskMd5.equalsIgnoreCase(OF_MD5)) {
+					// Bad copy. Attempt delete just to make sure.
+					monitor.setNote("Optifine MD5 bad - downloading");
 
                     try {
                         deleted = fo.delete();
@@ -157,7 +804,7 @@ public class Installer extends JPanel  implements PropertyChangeListener
                 }
                 else {
                     // A good copy!
-                    System.out.println("Optifine MD5 good! " + OF_MD5);
+					monitor.setNote("Optifine MD5 good! " + OF_MD5);
                     return true;
                 }
 
@@ -168,7 +815,7 @@ public class Installer extends JPanel  implements PropertyChangeListener
                 if (success == false || optOnDiskMd5 == null || !optOnDiskMd5.equalsIgnoreCase(OF_MD5)) {
                     // No good
                     if (optOnDiskMd5 != null)
-                        System.out.println("Optifine - bad MD5. Got " + optOnDiskMd5 + ", expected " + OF_MD5);
+						monitor.setNote("Optifine - bad MD5. Got " + optOnDiskMd5 + ", expected " + OF_MD5);
                     try {
                         deleted = fo.delete();
                     }
@@ -479,7 +1126,11 @@ public class Installer extends JPanel  implements PropertyChangeListener
             if( jar_id != null )
             {
                 InputStream version_json;
-                if(useForge.isSelected() /*&& forgeVersion.getSelectedItem() != forgeNotFound*/ ) 
+				if(isMultiMC) {
+					String filename = "version-multimc.json";
+					version_json = Installer.class.getResourceAsStream(filename);
+				}
+				else if(useForge.isSelected() /*&& forgeVersion.getSelectedItem() != forgeNotFound*/ ) 
                 	{
                     String filename;
 					
@@ -496,7 +1147,8 @@ public class Installer extends JPanel  implements PropertyChangeListener
                             int ret = in.read(buff);
                             if( ret > 0 ) {
                                 String s = new String( buff,0, ret, "UTF-8");
-                                //s = s.replace("$FORGE_VERSION", (String)forgeVersion.getSelectedItem());
+								if(optCustomForgeVersion.isSelected())
+									s = s.replace(ORIG_FORGE_VERSION, FORGE_VERSION);					
                                 ret = s.length();
                                 System.arraycopy(s.getBytes("UTF-8"), 0, buff, 0, ret);
                             }
@@ -517,7 +1169,14 @@ public class Installer extends JPanel  implements PropertyChangeListener
                 InputStream version_jar =Installer.class.getResourceAsStream("version.jar");
                 if( version_jar != null && version_json != null )
                     try {
-                        File ver_dir = new File(new File(targetDir,"versions"),jar_id);
+						File ver_dir = null;
+						if(isMultiMC){
+							ver_dir = new File(mmcinst,"patches");
+							jar_id = "vivecraft";
+						}
+						else
+							ver_dir = new File(new File(targetDir,"versions"),jar_id);
+
                         ver_dir.mkdirs();
                         File ver_json_file = new File (ver_dir, jar_id+".json");
                         FileOutputStream ver_json = new FileOutputStream(ver_json_file);
@@ -535,11 +1194,29 @@ public class Installer extends JPanel  implements PropertyChangeListener
 								int jsonIndentSpaces = 2;
 								File fileJson = ver_json_file;
 								String json = readAsciiFile(fileJson);
+							json = json.replace("$FILE",jar_id);
 								JSONObject root = new JSONObject(json);
-								String args = (String)root.get("minecraftArguments");
+							
+							String args = (String)root.opt("minecraftArguments");
+							
+							if(args!=null) {
 								if(katvr.isSelected()) args += " --katvr";
 								if(kiosk.isSelected()) args += " --kiosk";
 								root.put("minecraftArguments", args);
+							}
+							
+							if(isMultiMC)
+								root.remove("id");
+							
+							if(isMultiMC && useForge.isSelected()) {
+								JSONArray tw = (JSONArray) root.get("+tweakers");
+								tw = new JSONArray();
+								tw.put("com.mtbs3d.minecrift.tweaker.MinecriftForgeTweaker");
+								tw.put("net.minecraftforge.fml.common.launcher.FMLTweaker");
+								tw.put("optifine.OptiFineForgeTweaker");
+								root.put("+tweakers", tw);
+							}
+							
 								FileWriter fwJson = new FileWriter(fileJson);
 								fwJson.write(root.toString(jsonIndentSpaces));
 								fwJson.flush();
@@ -662,316 +1339,135 @@ public class Installer extends JPanel  implements PropertyChangeListener
             } catch (InterruptedException e) {}
         }
 
-        /*
-         * Main task. Executed in background thread.
-         */
-        public String finalMessage;
-        @Override
-        public Void doInBackground()
+		private boolean updateLauncherJson(File mcBaseDirFile, String minecriftVer, String profileName)
         {
-            StringBuilder sbErrors = new StringBuilder();
-            String minecriftVersionName = "vivecraft-" + version + mod;
-            boolean checkedRedists = false;
-            boolean redistSuccess = true;
-            boolean downloadedForge = false;
-            boolean installedForge = false;
+			boolean result = false;
 
-            monitor.setProgress(0);
+			try {
+				int jsonIndentSpaces = 2;
+				File fileJson = new File(mcBaseDirFile, "launcher_profiles.json");
+				String json = readAsciiFile(fileJson);
+				JSONObject root = new JSONObject(json);
+				//System.out.println(root.toString(jsonIndentSpaces));
 
+				JSONObject profiles = (JSONObject)root.get("profiles");
+				JSONObject prof = null;
             try {
-                // Set progress dialog size (using reflection - hacky)
-                Field progressdialog = monitor.getClass().getDeclaredField("dialog");
-                if (progressdialog != null) {
-                    progressdialog.setAccessible(true);
-                    Dialog dlg = (Dialog) progressdialog.get(monitor);
-                    if (dlg != null) {
-                        dlg.setSize(550, 200);
-                        dlg.setLocationRelativeTo(null);
+					prof = (JSONObject) profiles.get(profileName);
                     }
+				catch (Exception e) {
+					//this is normal if doesnt exist.
                 }
-            }
-            catch (NoSuchFieldException e) {}
-            catch (IllegalAccessException e) {}
-
-
-            finalMessage = "Failed: Couldn't download C++ redistributables. ";
-            monitor.setNote("Checking for required libraries...");
-            monitor.setProgress(5);
-
-            if (System.getProperty("os.name").contains("Windows"))
-            {
-                // Windows C++ redists (ah the joys of c native code)
-
-                checkedRedists = true;
-
-
-
-                // Determine if we have a Win 64bit OS.
-                boolean is64bitOS = (System.getenv("ProgramFiles(x86)") != null);
-
-                File redist2012_64 = new File(tempDir + "/vcredist_x64_2012.exe");
-                File redist2012_32 = new File(tempDir + "/vcredist_x86_2012.exe");
-                File redist2010_64 = new File(tempDir + "/vcredist_x64_2010.exe");
-                File redist2010_32 = new File(tempDir + "/vcredist_x86_2010.exe");
-
-                boolean neededRedist2012_64 = false;
-                boolean neededRedist2012_32 = false;
-                boolean neededRedist2010_64 = false;
-                boolean neededRedist2010_32 = false;
-
-                // Download VS 2012 64bit
-                if (NEEDS_2012_REDIST && redistSuccess && is64bitOS) {
-                    if (!redist2012_64.exists()) {
-                        neededRedist2012_64 = true;
-                        monitor.setNote("Downloading VC 2012 C++ 64bit redist...");
-                        monitor.setProgress(10);
-                        if (!downloadFile(winredist2012_64url, redist2012_64)) {
-                            redist2012_64.deleteOnExit();
-                            redistSuccess = false;
-                        }
-                    }
-                }
-
-                // Download VS 2010 64bit
-                if (NEEDS_2010_REDIST && redistSuccess && is64bitOS) {
-                    if (!redist2010_64.exists()) {
-                        neededRedist2010_64 = true;
-                        monitor.setNote("Downloading VC 2010 C++ 64bit redist...");
-                        monitor.setProgress(15);
-                        if (!downloadFile(winredist2010_64url, redist2010_64)) {
-                            redist2010_64.deleteOnExit();
-                            redistSuccess = false;
-                        }
-                    }
-                }
-
-                // Download VS 2012 32bit
-                if (NEEDS_2012_REDIST && redistSuccess && !redist2012_32.exists()) {
-                    neededRedist2012_32 = true;
-                    monitor.setNote("Downloading VC 2012 C++ 32bit redist...");
-                    monitor.setProgress(20);
-                    if (!downloadFile(winredist2012_32url, redist2012_32)) {
-                        redist2012_32.deleteOnExit();
-                        redistSuccess = false;
-                    }
-                }
-
-                // Download VS 2010 32bit
-                if (NEEDS_2010_REDIST && redistSuccess && !redist2010_32.exists()) {
-                    neededRedist2010_32 = true;
-                    monitor.setNote("Downloading VC 2010 C++ 32bit redist...");
-                    monitor.setProgress(25);
-                    if (!downloadFile(winredist2010_32url, redist2010_32)) {
-                        redist2010_32.deleteOnExit();
-                        redistSuccess = false;
-                    }
-                }
-
-                // Install VS2012 64bit
-                if (NEEDS_2012_REDIST && redistSuccess && is64bitOS && neededRedist2012_64) {
-                    monitor.setNote("Installing VC 2012 C++ 32bit redist...");
-                    monitor.setProgress(30);
-                    try {
-                        Process process = new ProcessBuilder(redist2012_64.getAbsolutePath(), "/quiet", "/norestart").start();
-                        process.waitFor();
-                    } catch (Exception e) {
-                        e.printStackTrace();
-                        redist2012_64.deleteOnExit();
-                        redistSuccess = false;
-                    }
-                }
-
-                // Install VS2010 64bit
-                if (NEEDS_2010_REDIST && redistSuccess && is64bitOS && neededRedist2010_64) {
-                    monitor.setNote("Installing VC 2010 C++ 64bit redist...");
-                    monitor.setProgress(33);
-                    try {
-                        Process process = new ProcessBuilder(redist2010_64.getAbsolutePath(), "/quiet", "/norestart").start();
-                        process.waitFor();
-                    } catch (Exception e) {
-                        e.printStackTrace();
-                        redist2010_64.deleteOnExit();
-                        redistSuccess = false;
-                    }
-                }
-
-                // Install VS2012 32bit
-                if (NEEDS_2012_REDIST && redistSuccess && neededRedist2012_32) {
-                    monitor.setNote("Installing VC 2012 C++ 32bit redist...");
-                    monitor.setProgress(36);
-                    try {
-                        Process process = new ProcessBuilder(redist2012_32.getAbsolutePath(), "/quiet", "/norestart").start();
-                        process.waitFor();
-                    } catch (Exception e) {
-                        e.printStackTrace();
-                        redist2012_32.deleteOnExit();
-                        redistSuccess = false;
-                    }
-                }
-
-                // Install VS2010 32bit
-                if (NEEDS_2010_REDIST && redistSuccess && neededRedist2010_32) {
-                    monitor.setNote("Installing VC 2010 C++ 32bit redist...");
-                    monitor.setProgress(39);
-                    try {
-                        Process process = new ProcessBuilder(redist2010_32.getAbsolutePath(), "/quiet", "/norestart").start();
-                        process.waitFor();
-                    } catch (Exception e) {
-                        e.printStackTrace();
-                        redist2010_32.deleteOnExit();
-                        redistSuccess = false;
-                    }
-                }
+				java.text.DateFormat dateFormat=new java.text.SimpleDateFormat("yyyy-MM-dd'T'HH:mm:ss.SSSZ");
+				if (prof == null) {
+					prof = new JSONObject();
+					prof.put("name", profileName);
+					prof.put("useHopperCrashService", false);
+					prof.put("launcherVisibilityOnGameClose", "keep the launcher open");
+					prof.put("created", dateFormat.format(new java.util.Date()));
+					profiles.put(profileName, prof);
             }
 
-            if (checkedRedists && !redistSuccess) {
-				JOptionPane.showMessageDialog(null, "Could not download VC++ Redist. Game might not work.", "Warning", JOptionPane.INFORMATION_MESSAGE);
-            }
+				prof.put("lastVersionId", minecriftVer + mod);
+				prof.put("javaArgs", "-Xmx" + ramAllocation.getSelectedItem() + "G -Xms" + ramAllocation.getSelectedItem() + "G -XX:+UseParallelGC -XX:ParallelGCThreads=3 -XX:MaxGCPauseMillis=3 -Xmn256M -Dfml.ignoreInvalidMinecraftCertificates=true -Dfml.ignorePatchDiscrepancies=true");
+				root.put("selectedProfile", profileName);
+				prof.put("lastUsed", dateFormat.format(new java.util.Date()));
+				if(chkCustomGameDir.isSelected() && txtCustomGameDir.getText().trim() != ""){
+					prof.put("gameDir", txtCustomGameDir.getText());
+				} else {
+					prof.remove("gameDir");
+				}
 
-            finalMessage = "Failed: Couldn't download Optifine. ";
-            monitor.setNote("Checking Optifine... Please donate to them!");
-            monitor.setProgress(42);
-            // Attempt optifine download...
-            boolean downloadedOptifine = false;
-            monitor.setNote("Downloading Optifine... Please donate to them!");
+				FileWriter fwJson = new FileWriter(fileJson);
+				fwJson.write(root.toString(jsonIndentSpaces));
+				fwJson.flush();
+				fwJson.close();
 
-            for (int i = 1; i <= 3; i++)
-            {
-                if (DownloadOptiFine())
-                {
-                    // Got it!
-                    downloadedOptifine = true;
-                    break;
+				result = true;
+			}
+			catch (Exception e) {
+				e.printStackTrace();
+			}
+
+			return result;
+		}
+
+		private boolean updateMMCInst(File mcBaseDirFile, String minecriftVer)
+		{
+			boolean result = false;
+
+			try {
+				File cfg = new File(mcBaseDirFile, "instance.cfg");
+				if(!cfg.exists()) return result;
+
+				BufferedReader r = new BufferedReader(new FileReader(cfg));
+				java.util.List<String> lines = new ArrayList<String>();
+				String l;
+				while((l = r.readLine()) != null){
+
+					if(l.startsWith("JvmArgs")) 
+						continue;
+
+					if(l.startsWith("MaxMemAlloc")) 
+						continue;
+
+					if(l.startsWith("MinMemAlloc"))
+						continue;
+
+					if(l.startsWith("OverrideJavaArgs"))
+						continue;
+
+					if(l.startsWith("OverrideMemory"))
+						continue;
+					lines.add(l);
                 }
 
-                // Failed. Sleep a bit and retry...
-                if (i < 3) {
-                    monitor.setNote("Downloading Optifine... waiting...");
-                    try {
-                        Thread.sleep(i * 1000);
-                    }
-                    catch (InterruptedException e) {
-                    }
-                    monitor.setNote("Downloading Optifine...retrying...");
-                }
+				lines.add("MinMemAlloc=" + ((Integer)ramAllocation.getSelectedItem())*1024);
+				lines.add("MaxMemAlloc=" + ((Integer)ramAllocation.getSelectedItem())*1024);
+				lines.add("OverrideJavaArgs=true");
+				lines.add("OverrideMemory=true");
+				lines.add("JvmArgs=-XX:+UseParallelGC -XX:ParallelGCThreads=3 -XX:MaxGCPauseMillis=3 -Xmn256M -Dfml.ignoreInvalidMinecraftCertificates=true -Dfml.ignorePatchDiscrepancies=true");
+
+				r.close();
+
+			    String[] arr = lines.toArray(new String[lines.size()]);
+				Arrays.sort(arr);
+
+				BufferedWriter w = new BufferedWriter(new FileWriter(cfg,false));
+
+				for (String string : arr) {
+					w.write(string);
+					w.newLine();
             }
+
+				w.close();
+
+				File mmcpack = new File(mcBaseDirFile, "mmc-pack.json");
+				if(!mmcpack.exists()) return result;
+				String json = readAsciiFile(mmcpack);
+
+				JSONObject root = new JSONObject(json);
+				JSONArray components = (JSONArray)root.get("components");
+
+				JSONObject v = new JSONObject();
+				v.put("cachedName", "Vivecraft");
+				v.put("uid", "vivecraft");
             
-            if(useShadersMod.isSelected()){
-	            finalMessage = "Failed: Couldn't download ShadersMod. ";
-	            monitor.setNote("Checking ShadersModCore");
-	            monitor.setProgress(42);
-	            boolean downloadedSMC = false;
-	            monitor.setNote("Downloading ShadersModCore");
+				components.put(v);
 	
-	            for (int i = 1; i <= 3; i++)
-	            {
-	                if (downloadSMC(useForge.isSelected()))
-	                {
-	                    // Got it!
-	                	downloadedSMC = true;
-	                    break;
-	                }
+				FileWriter fwJson = new FileWriter(mmcpack);
+				fwJson.write(root.toString(2));
+				fwJson.flush();
+				fwJson.close();
 	
-	                // Failed. Sleep a bit and retry...
-	                if (i < 3) {
-	                    monitor.setNote("Downloading ShadersModCore... waiting...");
-	                    try {
-	                        Thread.sleep(i * 1000);
+				result = true;
 	                    }
-	                    catch (InterruptedException e) {
-	                    }
-	                    monitor.setNote("Downloading ShadersModCore...retrying...");
-	                }
-	            }
-            }
-            
-            monitor.setProgress(50);
-            monitor.setNote("Checking for base game...");
-			
-     
-            if(!SetupMinecraftAsLibrary())
-            {
+			catch (Exception e) {
             JOptionPane.showMessageDialog(null,
-                                         "Could not locate or download base game. The Mincraft Launcher will attempt to download it.",
-                                         "Warning!",JOptionPane.WARNING_MESSAGE);
+							e.toString(),"",JOptionPane.WARNING_MESSAGE);
             }
-            // VIVE START - install openVR
-            monitor.setProgress(52);
-            monitor.setNote("Installing OpenVR...");
-            finalMessage = "Failed: Couldn't extract openvr_api.dll to .minecraft folder.";
-            if(!InstallOpenVR())
-            {
-				monitor.close();
-				return null;
-            }
-            // VIVE END - install openVR
             
-            // Setup forge if necessary
-            if (useForge.isSelected() && !forgeVersionInstalled) {
-                monitor.setProgress(55);
-                monitor.setNote("Downloading Forge " + FULL_FORGE_VERSION + "...");
-                downloadedForge = downloadFile(forge_url, forgeInstaller);
-				if(!downloadedForge)
-        		JOptionPane.showMessageDialog(null, "Could not download Forge. Please exit this installer and download it manually", "Forge Installation", JOptionPane.WARNING_MESSAGE);
-            }
-            if (downloadedForge && useForge.isSelected() && !forgeVersionInstalled) {
-                monitor.setProgress(65);
-                monitor.setNote("Installing Forge " + FULL_FORGE_VERSION + "...");
-                installedForge = installForge(forgeInstaller);
-            }
-            monitor.setProgress(75);
-            monitor.setNote("Extracting correct Minecrift version...");
-            finalMessage = "Failed: Couldn't extract Minecrift. Try redownloading this installer.";
-            if(!ExtractVersion())
-            {
-                monitor.close();
-                return null;
-            }
-            if(useHrtf.isSelected())
-            {
-                monitor.setProgress(85);
-                monitor.setNote("Configuring HRTF audio...");
-                if(!EnableHRTF())
-                {
-                    sbErrors.append("Failed to set up HRTF! Vivecraft will still work but audio won't be binaural.\n");
-                }
-            }
-            boolean profileCreated = false;
-            finalMessage = "Failed: Couldn't setup profile!";
-            if (createProfile.isSelected())
-            {
-                monitor.setProgress(95);
-                monitor.setNote("Creating Vivecraft profile...");
-                if (!updateLauncherJson(targetDir, minecriftVersionName))
-                    sbErrors.append("Failed to set up 'Vivecraft' profile (you can still manually select Edit Profile->Use Version " + minecriftVersionName + " in the Minecraft launcher)\n");
-                else
-                    profileCreated = true;
-            }
-			
-            if (!downloadedOptifine) {
-                finalMessage = "Installed (but failed to download OptiFine). Restart Minecraft" +
-                        (profileCreated == false ? " and Edit Profile->Use Version " + minecriftVersionName : " and select the '" + getMinecraftProfileName(useForge.isSelected(), useShadersMod.isSelected()) + "' profile.") +
-                        "\nPlease download and install Optifine " + OF_FILE_NAME + " from https://optifine.net/downloads before attempting to play.";
-            }
-            else {
-                finalMessage = "Installed successfully! Restart Minecraft" +
-                        (profileCreated == false ? " and Edit Profile->Use Version " + minecriftVersionName : " and select the '" + getMinecraftProfileName(useForge.isSelected(), useShadersMod.isSelected()) + "' profile.");
-            }
-			
-            monitor.setProgress(100);
-            monitor.close();
-            return null;
-        }
-
-        /*
-         * Executed in event dispatching thread
-         */
-        @Override
-        public void done() {
-            setCursor(null); // turn off the wait cursor
-            JOptionPane.showMessageDialog(null, finalMessage, "Complete", JOptionPane.INFORMATION_MESSAGE);
-            dialog.dispose();
-            emptyFrame.dispose();
+			return result;
         }
 
     }
@@ -983,49 +1479,7 @@ public class Installer extends JPanel  implements PropertyChangeListener
         }
     }
 
-    public void run()
-    {
-        JOptionPane optionPane = new JOptionPane(this, JOptionPane.PLAIN_MESSAGE, JOptionPane.OK_CANCEL_OPTION, null, new String[]{"Install", "Cancel"});
-
-        emptyFrame = new Frame("Vivecraft Installer");
-        emptyFrame.setUndecorated(true);
-        emptyFrame.setVisible(true);
-        emptyFrame.setLocationRelativeTo(null);
-        dialog = optionPane.createDialog(emptyFrame, "Vivecraft Installer");
-        dialog.setDefaultCloseOperation(JDialog.DISPOSE_ON_CLOSE);
-		dialog.setResizable(true);
-		dialog.setSize(620,748);
-        dialog.setVisible(true);
-        String str =  ((String)optionPane.getValue());
-        if (str !=null && ((String)optionPane.getValue()).equalsIgnoreCase("Install"))
-        {
-            int option = JOptionPane.showOptionDialog(
-                                         null,
-                                         "Please ensure you have closed the Minecraft launcher before proceeding.\n" 
-                                         //"Also, if installing with Forge please ensure you have installed Forge " + FORGE_VERSION + " first.",
-                                         ,"Important!",
-                                         JOptionPane.OK_CANCEL_OPTION,
-                                         JOptionPane.WARNING_MESSAGE, null, null, null);
             
-            if (option == JOptionPane.OK_OPTION) {
-                monitor = new ProgressMonitor(null, "Installing Vivecraft...", "", 0, 100);
-                monitor.setMillisToDecideToPopup(0);
-                monitor.setMillisToPopup(0);
-
-                task = new InstallTask();
-                task.addPropertyChangeListener(this);
-                task.execute();
-            }
-            else{
-                dialog.dispose();
-                emptyFrame.dispose();
-            }
-        }
-        else{
-            dialog.dispose();
-            emptyFrame.dispose();
-        }
-    }
 
     private static void createAndShowGUI() {
         String userHomeDir = System.getProperty("user.home", ".");
@@ -1051,62 +1505,6 @@ public class Installer extends JPanel  implements PropertyChangeListener
         panel.run();
     }
 
-    private boolean updateLauncherJson(File mcBaseDirFile, String minecriftVer)
-    {
-        boolean result = false;
-
-        try {
-            int jsonIndentSpaces = 2;
-            String profileName = getMinecraftProfileName(useForge.isSelected(), useShadersMod.isSelected());
-			if(chkCustomProfileName.isSelected() && txtCustomProfileName.getText().trim() != ""){
-				profileName = txtCustomProfileName.getText();
-			}
-            File fileJson = new File(mcBaseDirFile, "launcher_profiles.json");
-            String json = readAsciiFile(fileJson);
-            JSONObject root = new JSONObject(json);
-            //System.out.println(root.toString(jsonIndentSpaces));
-
-            JSONObject profiles = (JSONObject)root.get("profiles");
-            JSONObject prof = null;
-            try {
-                prof = (JSONObject) profiles.get(profileName);
-            }
-            catch (Exception e) {
-				//this is normal if doesnt exist.
-			}
-			java.text.DateFormat dateFormat=new java.text.SimpleDateFormat("yyyy-MM-dd'T'HH:mm:ss.SSSZ");
-            if (prof == null) {
-                prof = new JSONObject();
-                prof.put("name", profileName);
-                prof.put("useHopperCrashService", false);
-                prof.put("launcherVisibilityOnGameClose", "keep the launcher open");
-                prof.put("created", dateFormat.format(new java.util.Date()));
-                profiles.put(profileName, prof);
-            }
-
-            prof.put("lastVersionId", minecriftVer + mod);
-			prof.put("javaArgs", "-Xmx" + ramAllocation.getSelectedItem() + "G -XX:+UseConcMarkSweepGC -XX:+CMSIncrementalMode -XX:-UseAdaptiveSizePolicy -Xmn256M -Dfml.ignoreInvalidMinecraftCertificates=true -Dfml.ignorePatchDiscrepancies=true");
-            root.put("selectedProfile", profileName);
-            prof.put("lastUsed", dateFormat.format(new java.util.Date()));
-			if(chkCustomGameDir.isSelected() && txtCustomGameDir.getText().trim() != ""){
-				prof.put("gameDir", txtCustomGameDir.getText());
-			} else {
-				prof.remove("gameDir");
-			}
-
-            FileWriter fwJson = new FileWriter(fileJson);
-            fwJson.write(root.toString(jsonIndentSpaces));
-            fwJson.flush();
-            fwJson.close();
-
-            result = true;
-        }
-        catch (Exception e) {
-            e.printStackTrace();
-        }
-
-        return result;
-    }
 
     private class FileSelectAction extends AbstractAction
     {
@@ -1192,330 +1590,6 @@ public class Installer extends JPanel  implements PropertyChangeListener
         }
     }
      
-    public Installer(File target)
-    {
-		targetDir = target;
-        ToolTipManager.sharedInstance().setDismissDelay(Integer.MAX_VALUE);
-        this.setLayout(new BoxLayout(this, BoxLayout.Y_AXIS));
-
-        JPanel logoSplash = new JPanel();
-        logoSplash.setLayout(new BoxLayout(logoSplash, BoxLayout.Y_AXIS));
-        try {
-            // Read png
-            BufferedImage image;
-            image = ImageIO.read(Installer.class.getResourceAsStream("logo.png"));
-            ImageIcon icon = new ImageIcon(image.getScaledInstance(500, 200,  java.awt.Image.SCALE_SMOOTH));
-            JLabel logoLabel = new JLabel(icon);
-            logoLabel.setAlignmentX(LEFT_ALIGNMENT);
-            logoLabel.setAlignmentY(CENTER_ALIGNMENT);
-            if (!QUIET_DEV)	// VIVE - hide oculus logo
-	            logoSplash.add(logoLabel);
-        } catch (IOException e) {
-        } catch( IllegalArgumentException e) {
-        }
-
-        userHomeDir = System.getProperty("user.home", ".");
-        osType = System.getProperty("os.name").toLowerCase();
-        if (osType.contains("win"))
-        {
-            isWindows = true;
-            appDataDir = System.getenv("APPDATA");
-        }
-
-        version = "UNKNOWN";
-        try {
-            InputStream ver = Installer.class.getResourceAsStream("version");
-            if( ver != null )
-            {
-                String[] tok = new BufferedReader(new InputStreamReader(ver)).readLine().split(":");
-                if( tok.length > 0)
-                {
-                    jar_id = tok[0];
-                    version = tok[1];
-                }
-            }
-        } catch (IOException e) { }
-
-        // Read release notes, save to file
-        String tmpFileName = System.getProperty("java.io.tmpdir") + releaseNotePathAddition + "Vivecraft" + version.toLowerCase() + "_release_notes.txt";
-        releaseNotes = new File(tmpFileName);
-        InputStream is = Installer.class.getResourceAsStream("release_notes.txt");
-        if (!copyInputStreamToFile(is, releaseNotes)) {
-            releaseNotes = null;
-        }
-
-        JLabel tag = new JLabel("Welcome! This will install Vivecraft "+ version);
-        tag.setAlignmentX(LEFT_ALIGNMENT);
-        tag.setAlignmentY(CENTER_ALIGNMENT);
-        logoSplash.add(tag);
-        
-        logoSplash.add(Box.createRigidArea(new Dimension(5,20)));
-        tag = new JLabel("Select path to minecraft. (The default here is almost always what you want.)");
-        tag.setAlignmentX(LEFT_ALIGNMENT);
-        tag.setAlignmentY(CENTER_ALIGNMENT);
-        logoSplash.add(tag);
-
-        logoSplash.setAlignmentX(LEFT_ALIGNMENT);
-        logoSplash.setAlignmentY(TOP_ALIGNMENT);
-
-        this.add(logoSplash);
-
-        JPanel entryPanel = new JPanel();
-        entryPanel.setLayout(new BoxLayout(entryPanel,BoxLayout.X_AXIS));
-        entryPanel.setAlignmentX(LEFT_ALIGNMENT);
-        entryPanel.setAlignmentY(TOP_ALIGNMENT);
-
-        selectedDirText = new JTextField();
-        selectedDirText.setEditable(false);
-        selectedDirText.setToolTipText("Path to minecraft");
-        selectedDirText.setAlignmentX(LEFT_ALIGNMENT);
-        selectedDirText.setAlignmentY(TOP_ALIGNMENT);
-		selectedDirText.setMaximumSize(new Dimension(400,20));
-
-        JButton dirSelect = new JButton();
-		dirSelect.setMaximumSize(new Dimension(20,20));
-        dirSelect.setAction(new FileSelectAction());
-        dirSelect.setText("...");
-        dirSelect.setToolTipText("Select an alternative minecraft directory");
-        dirSelect.setAlignmentX(LEFT_ALIGNMENT);
-        dirSelect.setAlignmentY(TOP_ALIGNMENT);
-
-        entryPanel.add(selectedDirText);
-        entryPanel.add(dirSelect);
-
-        infoLabel = new JLabel();
-        infoLabel.setHorizontalTextPosition(JLabel.LEFT);
-        infoLabel.setVerticalTextPosition(JLabel.TOP);
-        infoLabel.setAlignmentX(LEFT_ALIGNMENT);
-        infoLabel.setAlignmentY(TOP_ALIGNMENT);
-        infoLabel.setVisible(false);
-
-        fileEntryPanel = new JPanel();
-        fileEntryPanel.setLayout(new BoxLayout(fileEntryPanel,BoxLayout.Y_AXIS));
-        fileEntryPanel.setAlignmentX(LEFT_ALIGNMENT);
-        fileEntryPanel.setAlignmentY(TOP_ALIGNMENT);
-
-        fileEntryPanel.add(entryPanel);
-        fileEntryPanel.add(infoLabel);
-
-        this.add(fileEntryPanel);
-
-        this.add(Box.createVerticalStrut(5));
-
-
-
-        //Forge Options
-
-        JPanel forgePanel = new JPanel();
-        forgePanel.setLayout( new BoxLayout(forgePanel, BoxLayout.X_AXIS));
-        //Create forge: no/yes buttons
-        useForge = new JCheckBox();
-        AbstractAction actf = new updateActionF();
-        actf.putValue(AbstractAction.NAME, "Install Vivecraft with Forge " + FORGE_VERSION);
-        useForge.setAction(actf);
-		useForge.setSelected(DEFAULT_FORGE_INSTALL);
-        forgeVersion = new JComboBox();
-        if (!ALLOW_FORGE_INSTALL)
-            useForge.setEnabled(false);
-        useForge.setToolTipText(
-                "<html>" +
-                "If checked, installs Vivecraft with Forge support.<br>" +
-                "</html>");
-
-        //Add "yes" and "which version" to the forgePanel
-        useForge.setAlignmentX(LEFT_ALIGNMENT);
-        forgeVersion.setAlignmentX(LEFT_ALIGNMENT);
-        forgePanel.setAlignmentX(LEFT_ALIGNMENT);
-        forgePanel.add(useForge);
-        //forgePanel.add(forgeVersion);
-		
-		//Create Profile
-        createProfile = new JCheckBox("", true);
-		AbstractAction actp = new updateActionP();
-        actp.putValue(AbstractAction.NAME, "Create Vivecraft launcher profile");
-        createProfile.setAction(actp);
-        createProfile.setAlignmentX(LEFT_ALIGNMENT);
-        createProfile.setSelected(true);
-        createProfile.setToolTipText(
-                "<html>" +
-                "Creates or updates a Minecraft Launcher profile for Vivecraft with the selected settings.<br>" +
-                "You should typically leave this checked." +
-                "</html>");
-
-		//Binaural Audio
-
-        useHrtf = new JCheckBox("Enable binaural audio (Only needed once per PC)", false);
-        useHrtf.setToolTipText(
-                "<html>" +
-                        "If checked, the installer will create the configuration file needed for OpenAL HRTF<br>" +
-                        "ear-aware sound in Minecraft (and other games).<br>" +
-                        " If the file has previously been created, you do not need to check this again.<br>" +
-                        " NOTE: Your sound card's output MUST be set to 44.1Khz.<br>" +
-                        " WARNING, will overwrite " + (isWindows ? (appDataDir + "\\alsoft.ini") : (userHomeDir + "/.alsoftrc")) + "!<br>" +
-                        " Delete the " + (isWindows ? "alsoft.ini" : "alsoftrc") + " file to disable HRTF again." +
-                        "</html>");
-        useHrtf.setAlignmentX(LEFT_ALIGNMENT);
-
-		//ShadersMod
-
-		useShadersMod = new JCheckBox();
-        useShadersMod.setAlignmentX(LEFT_ALIGNMENT);
-        AbstractAction acts = new updateActionSM();
-        acts.putValue(AbstractAction.NAME, "Install Vivecraft with ShadersMod 2.3.29");
-        useShadersMod.setAction(acts);
-        useShadersMod.setToolTipText(
-                "<html>" +
-                "If checked, sets the vivecraft profile to use ShadersMod <br>" +
-                "support." +
-                "</html>");
-
-		//RAM Allocation
-		
-        JPanel ramPanel = new JPanel();
-        ramPanel.setLayout( new BoxLayout(ramPanel, BoxLayout.X_AXIS));
-        ramPanel.setAlignmentX(LEFT_ALIGNMENT);
-        ramPanel.setAlignmentY(TOP_ALIGNMENT);
-
-		Integer[] rams = {1,2,4,6,8};
-
-		ramAllocation = new JComboBox(rams);
-		ramAllocation.setSelectedIndex(1);
-        ramAllocation.setToolTipText(
-                "<html>" +
-                "Select the amount of Ram, in GB to allocate to the Vivecraft profile.<br>" +
-                "At least 2GB is recommened. More than 1GB of ram requires 64 bit PC and java." +
-                "</html>");
-		ramAllocation.setAlignmentX(LEFT_ALIGNMENT);
-		ramAllocation.setMaximumSize( new Dimension((int)ramAllocation.getPreferredSize().getWidth(), 20));
-
-
-		JLabel ram = new JLabel("         Profile Ram Allocation (GB) ");
-		ram.setAlignmentX(LEFT_ALIGNMENT);
-        
-		ramPanel.add(ram);
-        ramPanel.add(ramAllocation);
-
-		//Custom Profile
-
-        JPanel namePanel = new JPanel();
-        namePanel.setLayout( new BoxLayout(namePanel, BoxLayout.X_AXIS));
-        namePanel.setAlignmentX(LEFT_ALIGNMENT);
-        namePanel.setAlignmentY(TOP_ALIGNMENT);
-
-		txtCustomProfileName = new JTextField();
-		txtCustomProfileName.setAlignmentX(LEFT_ALIGNMENT);
-		txtCustomProfileName.setMaximumSize(new Dimension(250,20));
-		txtCustomProfileName.setEditable(false);
-
-		chkCustomProfileName = new JCheckBox();
-		chkCustomProfileName.setAlignmentX(LEFT_ALIGNMENT);
-		AbstractAction u = new updateTxtEnabled();
-        u.putValue(AbstractAction.NAME, "Custom Profile Name");
-		chkCustomProfileName.setAction(u);
-        chkCustomProfileName.setToolTipText(
-                "<html>" +
-                "Enter a custom name for this profile</html>");
-
-    	namePanel.add(Box.createRigidArea(new Dimension(36,20)));
-		namePanel.add(chkCustomProfileName);
-        namePanel.add(txtCustomProfileName);
-
-		// Custom Game Dir
-
-        JPanel gameDirPanel = new JPanel();
-        gameDirPanel.setLayout( new BoxLayout(gameDirPanel, BoxLayout.X_AXIS));
-        gameDirPanel.setAlignmentX(LEFT_ALIGNMENT);
-        gameDirPanel.setAlignmentY(TOP_ALIGNMENT);
-
-		txtCustomGameDir= new JTextField();
-		txtCustomGameDir.setAlignmentX(LEFT_ALIGNMENT);
-		txtCustomGameDir.setMaximumSize(new Dimension(400,20));
-		txtCustomGameDir.setEditable(false);
-
-		chkCustomGameDir = new JCheckBox("Modpack Directory");
-		chkCustomGameDir.setAlignmentX(LEFT_ALIGNMENT);
-        chkCustomGameDir.setToolTipText(
-                "<html>" +
-                "Points the profile at a different game directory.<br>" +
-                "Select this to use Vivecraft with a modpack.<br>" +
-				"The game directory should contain the 'mods' " +
-				"directory of the desired pack." +
-				"</html>");
-        
-        JButton gdirSelect = new JButton();
-        gdirSelect.setAction(new GameDirSelectAction());
-        gdirSelect.setText("...");
-		gdirSelect.setMaximumSize(new Dimension(20,20));
-        gdirSelect.setToolTipText("Select a modpack directory");
-        entryPanel.add(gdirSelect);
-
-		gameDirPanel.add(Box.createRigidArea(new Dimension(36,20)));
-		gameDirPanel.add(chkCustomGameDir);
-        gameDirPanel.add(txtCustomGameDir);
-        gameDirPanel.add(gdirSelect);
-
-		// KATVR
-
-		katvr = new JCheckBox("KATVR Driver", false);
-        katvr.setToolTipText(
-                "<html>" +
-                "If checked, install the drivers needed for KATVR Treadmill<br>" +
-                "DO NOT select this unless you have the KATVR runtime installed.</html>");
-		katvr.setAlignmentX(LEFT_ALIGNMENT);
-
-
-		kiosk = new JCheckBox("Kiosk Mode", false);
-        kiosk.setToolTipText(
-                "<html>" +
-                "If checked, disables use of in-game menu via controller" +
-                "</html>");
-		kiosk.setAlignmentX(LEFT_ALIGNMENT);
-
-        this.add(forgePanel);
-		if(ALLOW_SHADERSMOD_INSTALL) this.add(useShadersMod);
-        this.add(createProfile);
-		this.add(ramPanel);
-		this.add(namePanel);
-		this.add(gameDirPanel);
-        if(ALLOW_HRTF_INSTALL)this.add(useHrtf);
-		this.add(new JLabel("         "));
-		if(ALLOW_KATVR_INSTALL||ALLOW_KIOSK_INSTALL) this.add(new JLabel("Advanced Options"));
-		if(ALLOW_KIOSK_INSTALL) this.add(kiosk);
-		if(ALLOW_KATVR_INSTALL) this.add(katvr);
-
-        this.add(Box.createRigidArea(new Dimension(5,20))); 
-      
-        instructions = new JLabel("",SwingConstants.CENTER);
-        instructions.setAlignmentX(CENTER_ALIGNMENT);
-        instructions.setAlignmentY(TOP_ALIGNMENT);
-        instructions.setForeground(Color.RED);
-        instructions.setPreferredSize(new Dimension(20, 40));
-        this.add(instructions);
-        
-        
-        this.add(Box.createVerticalGlue());
-        JLabel github = linkify("Vivecraft is open source. find it on Github",GITHUB_LINK,"Vivecraft Github");
-        JLabel wiki = linkify("Vivecraft home page",HOMEPAGE_LINK,"Vivecraft Home");
-        JLabel donate = linkify("If you think Vivecraft is awesome, please consider supporting us on Patreon",DONATION_LINK,"jrbudda's Patreon");
-        JLabel optifine = linkify("Vivecraft includes OptiFine for performance. Consider donating to them as well.","http://optifine.net/donate.php","http://optifine.net/donate.php");
-
-        github.setAlignmentX(CENTER_ALIGNMENT);
-        github.setHorizontalAlignment(SwingConstants.CENTER);
-        wiki.setAlignmentX(CENTER_ALIGNMENT);
-        wiki.setHorizontalAlignment(SwingConstants.CENTER);
-        donate.setAlignmentX(CENTER_ALIGNMENT);
-        donate.setHorizontalAlignment(SwingConstants.CENTER);
-        optifine.setAlignmentX(CENTER_ALIGNMENT);
-        optifine.setHorizontalAlignment(SwingConstants.CENTER);
-         
-        this.add(Box.createRigidArea(new Dimension(5,20)));
-        this.add( github );
-        this.add( wiki );
-        this.add( donate );
-        this.add( optifine );
-        updateFilePath();
-		updateInstructions();
-    }
 
     private void updateInstructions(){
 	String out = "<html>";
@@ -1528,11 +1602,15 @@ public class Installer extends JPanel  implements PropertyChangeListener
 		ramAllocation.setSelectedIndex(1);
     	if (useForge.isSelected()){
 			ramAllocation.setSelectedIndex(2);
-			out += "<br>Please make sure Forge has been installed first.";
+			if(optCustomForgeVersion.isSelected())
+				out += "<br>Custom Forge version NOT guaranteed to work!";
     	}
     	out+="</html>";
     	instructions.setText(out);
 		ramAllocation.setEnabled(createProfile.isSelected());
+		txtCustomForgeVersion.setEnabled(optCustomForgeVersion.isSelected());
+		txtCustomForgeVersion.setVisible(useForge.isSelected());
+		optCustomForgeVersion.setVisible(useForge.isSelected());
     }
     
     private void updateFilePath()
@@ -1540,21 +1618,6 @@ public class Installer extends JPanel  implements PropertyChangeListener
         try
         {
             targetDir = targetDir.getCanonicalFile();
-            if( targetDir.exists() ) {
-                File ForgeDir = new File( targetDir, "libraries"+File.separator+"net"+File.separator+"minecraftforge"+File.separator+"forge");
-                if( ForgeDir.isDirectory() ) {
-                    forgeVersions = ForgeDir.list();
-                    if (forgeVersions != null && forgeVersions.length > 0) {
-                        // Check for the currently required forge
-                        for (String forgeVersion : forgeVersions) {
-                            if (forgeVersion.contains(FORGE_VERSION)) {
-                                forgeVersionInstalled = true;
-                                break;
-                            }
-                        }
-                    }
-                }
-            }
             selectedDirText.setText(targetDir.getPath());
             selectedDirText.setForeground(Color.BLACK);
             infoLabel.setVisible(false);
